src/objects/ACCL__Tactic__c.object
<CustomObject>
    <fields>
        <fullName>ACCL__Amount__c</fullName>
        <description>Tactic Cost Amount</description>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Compensation_Model__c</fullName>
        <description>Which compensation model should be used for a tactic</description>
        <label>Compensation Model</label>
        <picklist>
            <picklistValues>
                <fullName>LumpSum</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PerCase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% Per Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly Lump Sum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Date_From__c</fullName>
        <description>Start date of a tactic</description>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Date_Thru__c</fullName>
        <description>End date of a tactic</description>
        <label>Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Filter_Criteria__c</fullName>
        <label>Filter Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Included__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines if a tactic is included in a promotion</description>
        <label>Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Instore_Date_From__c</fullName>
        <description>Instore start date of a tactic</description>
        <label>Instore Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Instore_Date_Thru__c</fullName>
        <description>Instore end date of a tactic</description>
        <label>Instore Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Lift__c</fullName>
        <label>Lift %</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACCL__Payment_Method__c</fullName>
        <description>Which payment method should be used for a tactic</description>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>OnInvoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OffInvoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;P</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Pct_of_Stores__c</fullName>
        <label>% of Stores</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion__c</fullName>
        <description>Reference to the promotion</description>
        <label>Promotion</label>
        <referenceTo>ACCL__Promotion__c</referenceTo>
        <relationshipLabel>Tactics</relationshipLabel>
        <relationshipName>Tactics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__RECORD_LINK, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <formula>TEXT(ACCL__Tactic_Template__r.ACCL__Sales_Org__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Shipment_Date_From__c</fullName>
        <description>Shipment start date of a tactic</description>
        <label>Shipment Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Shipment_Date_Thru__c</fullName>
        <description>Shipment end date of a tactic</description>
        <label>Shipment Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Tactic_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to the tactic template</description>
        <label>Tactic Template</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Tactic template does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>ACCL__Tactic_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Tactic_Template__c</referenceTo>
        <relationshipLabel>Tactics</relationshipLabel>
        <relationshipName>Tactics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UL_Condition_Type__c</fullName>
        <label>Condition Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visibility New Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPP Off Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDLP Off Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPP On Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDLP On Invoice</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Investment_Method__c</fullName>
        <label>Investment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash Discount Per Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exact Price</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Off_On_Invoice__c</fullName>
        <label>Off / On Invoice</label>
        <picklist>
            <picklistValues>
                <fullName>On Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Invoice</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Order_Date_From__c</fullName>
        <description>This field is used to store order date of tactic</description>
        <label>Order Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UL_Order_Date_Thru__c</fullName>
        <label>Order Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UL_Payment_Method__c</fullName>
        <description>Custom field to reflect the payment method</description>
        <label>Payment Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Promotion_Phase__c</fullName>
        <description>Reflects the Phase of the Promotion to which the Tactic is related to</description>
        <label>Promotion Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ForApproval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Take_Up_Rate__c</fullName>
        <label>Take-up Rate %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UL_Volume_Type__c</fullName>
        <label>Volume Type</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Tactic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ACCL__Amount__c</columns>
        <columns>ACCL__Lift__c</columns>
        <columns>ACCL__Date_From__c</columns>
        <columns>ACCL__Date_Thru__c</columns>
        <columns>ACCL__Compensation_Model__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Tactic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tactics</pluralLabel>
    <recordTypes>
        <fullName>ACCL__Display</fullName>
        <active>true</active>
        <label>Display</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__PriceReduction</fullName>
        <active>true</active>
        <label>Price Reduction</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__I_date_from_less_or_equal_i_date_thru</fullName>
        <active>true</active>
        <description>Instore Date From must be less than or equals Instore Date Thru</description>
        <errorConditionFormula>ACCL__Instore_Date_From__c  &gt;  ACCL__Instore_Date_Thru__c</errorConditionFormula>
        <errorDisplayField>ACCL__Instore_Date_From__c</errorDisplayField>
        <errorMessage>Instore Date From cannot be later than Instore Date Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Prevent_Tactic_Template_Change</fullName>
        <active>true</active>
        <description>This validation rule will prevent User to change/ update Tactic Template selection on Tactic</description>
        <errorConditionFormula>ISCHANGED( ACCL__Tactic_Template__c )</errorConditionFormula>
        <errorDisplayField>ACCL__Tactic_Template__c</errorDisplayField>
        <errorMessage>You cannot change a Tactic Template once a Tactic is created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__S_date_from_less_or_equal_s_date_thru</fullName>
        <active>true</active>
        <description>Shipment Date From &lt;= Shipment Date Thru</description>
        <errorConditionFormula>ACCL__Shipment_Date_From__c  &gt;  ACCL__Shipment_Date_Thru__c</errorConditionFormula>
        <errorDisplayField>ACCL__Shipment_Date_From__c</errorDisplayField>
        <errorMessage>Shipment Date From cannot be later than Shipment Date Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__date_from_less_or_equal_date_thru</fullName>
        <active>true</active>
        <errorConditionFormula>ACCL__Date_From__c  &gt;   ACCL__Date_Thru__c</errorConditionFormula>
        <errorDisplayField>ACCL__Date_From__c</errorDisplayField>
        <errorMessage>Date From cannot be later than Date Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UL_CreateInvestmentOnPromotionRule</fullName>
        <active>true</active>
        <errorConditionFormula>if( ISPICKVAL(ACCL__Promotion__r.UL_Promotion_Type__c, &apos;Volume Only&apos;) ,true,false )</errorConditionFormula>
        <errorMessage>you can&apos;t able to create on this promotion type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UL_OrderDateFromLessthanThrudate</fullName>
        <active>true</active>
        <errorConditionFormula>UL_Order_Date_From__c &gt; UL_Order_Date_Thru__c</errorConditionFormula>
        <errorDisplayField>UL_Order_Date_From__c</errorDisplayField>
        <errorMessage>Order Date From cannot be later than Order Date Thru</errorMessage>
    </validationRules>
</CustomObject>